# concept2_pipeline

./: .env.example  .gitignore  Dockerfile  README-F.md  README.md  docker-compose.yml  pyproject.toml  workspace.yaml
concept2_pipeline/: auth.py  definitions.py
concept2_pipeline/assets/: bronze.py  gold.py  silver.py
concept2_pipeline/resources/: postgres_resource.py
concept2_pipeline/sources/: concept2_source.py
